Site adapted to femhub

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,34 +2,19 @@
 
 {% block content %}
 
-                <h1 class="heading">The Hermes project</h1>
-                <font color=purple><p><b>Hermes</b></font> is a free C++/Python library for rapid prototyping of adaptive FEM and hp-FEM solvers developed
-by an open source community around the <a href="http://hpfem.math.unr.edu">hp-FEM group</a> at the University of Nevada, Reno. The library has a clean 
-design and modular structure, and it is available under the 
-<a href="http://www.gnu.org/licenses/gpl-2.0.txt">GPL license</a> 
-(Version 2, 1991). There are several <a href="uniquefeatures.html" 
-title="">unique features</a> that make Hermes different from other FEM and hp-FEM codes. 
-                <p>
-
-<center>
-<a href="http://hpfem.math.unr.edu/projects/hermes1d"><img src="hermes-logo/logo1d.pdf.png" width=130px border=0></a> 
- <a href="http://hpfem.math.unr.edu/projects/hermes2d-new"><img src="hermes-logo/logo2d.pdf.png" width=130px border=0></a>
-<a href="http://hpfem.math.unr.edu/projects/hermes3d/"><img src="hermes-logo/logo3d.pdf.png" width=130px border=0></a>
-</center>
+                <h1 class="heading">The Femhub project</h1>
+<p>The goal of <font color=purple><b>Femhub</b></font> is to be an open-source
+distribution featuring many finite element codes, together with a web notebook
+and a unified Python interface. We want to create a viable alternative to
+commercial FEM codes.
+<br/>
+It's currently in development.</p>
 
 <p>
 
 <center>
-<a href="http://femhub.org/"><img src="hermes-logo/logo_web_2.pdf.png" width=173px border=0 
-title="Run Hermes and other open source FEM codes online!"></a>
-</center>
-
-<p>
-
-<center>
-<a href="http://groups.google.com/group/hermes2d"><img src="hermes-logo/mlist1.pdf.png" width=130px border=0 title="Discussion related to Hermes2D"></a> 
- <a href="http://groups.google.com/group/hermes3d"><img src="hermes-logo/mlist2.pdf.png" width=130px border=0 title="Discussion related to Hermes3D"></a>
-<a href="http://groups.google.com/group/hpfem"><img src="hermes-logo/mlist3.pdf.png" width=130px border=0 title="General FEM discussion"></a>
+<a href="http://nb.femhub.org/">Run Femhub and other open source FEM codes
+online!</a>
 </center>
 
 {% endblock %}
