--- a/templates/news.html
+++ b/templates/news.html
@@ -1,9 +1,5 @@
 <h2 class="heading">News</h2>
 <ul>
-    <li>Mar 29, 2009: hermes3d: hcurl code merged into upstream tree</li>
-    <li>Mar 22, 2009: first version of hermes1d released</li>
-    <li>Mar 16, 2009: hermes3d development version released</li>
-    <li>Mar 16, 2009: we moved all our repositories to git</li>
-    <li>Feb 21, 2009: hermes over web launched: <a href="http://nb.hpfem.org/">nb.hpfem.org</a></li>
-    <li>Feb 17, 2009: website launched</li>
+    <li>May 18, 2009: femhub.org page created</li>
+    <li>May 13, 2009: femhub distribution started</li>
 </ul>
