--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,35 +1,29 @@
  <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-<title>{% block title %}Hermes: Free Adaptive hp-FEM{% endblock %}</title>
+<title>{% block title %}Femhub: FEM distribution{% endblock %}</title>
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 <link href="default.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
 <div id="header">
-	<h1><font color=purple>Hermes</font></h1>
-	<h2><font color=purple>H</font>igh<font color=purple>e</font>r-orde<font color=purple>r</font> <font color=purple>m</font>odular finite <font color=purple>e</font>lement <font color=purple>s</font>ystem</h2>
+	<h1><font color=purple>Femhub</font></h1>
 </div>
 <div id="left">
 	<div id="menu" class="boxed">
 		<h2 class="heading">Pages</h2>
 		<ul>
-			<li class="first"><a href="index.html" title="">The Hermes project</a></li>
-			<li><a href="hpfem.html" title="">What is hp-FEM?</a></li>
-			<li><a href="femcodes.html" title="">FEM codes and resources</a></li>
+			<li class="first"><a href="index.html" title="">The Femhub project</a></li>
+			<li><a href="development.html" title="">Development</a></li>
 		</ul>
 
-<font color=purple><b>Our mission</b></font>: To make adaptive hp-FEM available 
-to the broad computational science and engineering community as well as 
-to undergraduate and graduate students. We want Hermes to become an open 
-source alternatice to commercial FEM codes.<br>
+<font color=purple><b>Our mission</b></font>: To create an open-source
+alternative to commercial FEM codes.<br>
 <br>
 
 <p>
 
-<font color=purple><b>Scientific articles</b></font> about Hermes can 
-be found <a href="articles.html" title="">here</a>.<br>
 	</div>
 </div>
 <!-- end #left -->
