--- a/templates/layout.html
+++ b/templates/layout.html
@@ -43,7 +43,8 @@ alternative to commercial FEM codes.<br>
 <div style="clear: both;">&nbsp;</div>
 <div id="footer">
 	<p id="legal"> Hosted by the <a href="http://hpfem.math.unr.edu">hp-FEM group</a> 
-    at the <a href="http://www.unr.edu">University of Nevada, Reno</a>. <a href="http://github.com/certik/hpfem.org">Source</a>.
+    at the <a href="http://www.unr.edu">University of Nevada, Reno</a>. <a
+        href="http://github.com/certik/femhub.org">Source</a>.
 E-mail: solin~at~unr~dot~edu, phone (775) 784-4642, fax (775) 784-6378. 
 </p>
 </div>
