--- a/templates/index.html
+++ b/templates/index.html
@@ -2,19 +2,33 @@
 
 {% block content %}
 
-                <h1 class="heading">The Femhub project</h1>
-<p>The goal of <font color=purple><b>Femhub</b></font> is to be an open-source
-distribution featuring many finite element codes, together with a web notebook
-and a unified Python interface. We want to create a viable alternative to
-commercial FEM codes.
-<br/>
-It's currently in development.</p>
+
+                <h1 class="heading">The FEMhub project</h1>
+
+<font color=purple><b>Open source FEM codes</b></font>: <br> 
+
+<a href="http://hpfem.org"><img src="images/hermes2d_logo.png" width=200 height=70></a>
+<a href="http://code.google.com/p/sfepy/"><img src="images/sfepy_logo_title_small.png" width=200 height=70></a><br>
+<br>
 
 <p>
+<font color=purple><b>Visualization</b></font>: <br> 
 
-<center>
-<a href="http://nb.femhub.org/">Run Femhub and other open source FEM codes
-online!</a>
-</center>
+<a href="http://mayavi.sourceforge.net/"><img src="images/mayavi.gif" width=200 height=70></a>
+<a href="http://matplotlib.sourceforge.net/"><img src="images/matplotlib_logo.png" width=200 height=70></a>
+
+<p>
+<font color=purple><b>Other software</b></font>: <br> 
+
+<a href="http://ipython.scipy.org/moin/"><img src="images/IPy-transparent-120-flush.png" width=200 height=70></a>
+<a href="http://numpy.scipy.org/"><img src="images/numpylogo.png" width=200 height=70></a>
+<a href="http://www.scipy.org/"><img src="images/scipylogo.gif" width=200 height=70></a>
+<a href="http://code.google.com/p/sympy/"><img src="images/sympy-160px.png" width=200 height=70></a><br>
+
+
+
+
+
+
 
 {% endblock %}
