--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,28 +1,42 @@
  <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-<title>{% block title %}Femhub: FEM distribution{% endblock %}</title>
+<title>{% block title %}FEMhub: Open-source FEM distribution{% endblock %}</title>
 <meta name="keywords" content="" />
 <meta name="description" content="" />
 <link href="default.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
 <div id="header">
-	<h1><font color=purple>Femhub</font></h1>
+	<h1><font color=purple>FEMhub</font></h1>
+        <h2>Open-source FEM distribution</h2>
 </div>
 <div id="left">
 	<div id="menu" class="boxed">
 		<h2 class="heading">Pages</h2>
 		<ul>
-			<li class="first"><a href="index.html" title="">The Femhub project</a></li>
-			<li><a href="development.html" title="">Development</a></li>
+			<li class="first"><a href="index.html" title="">FEMhub project overview</a></li>
+			<li><a href="http://nb.femhub.org" title="">Web notebook</a></li>
+			<li><a href="http://code.google.com/p/femhub/" title="">Development</a></li>
 		</ul>
 
-<font color=purple><b>Our mission</b></font>: To create an open-source
-alternative to commercial FEM codes.<br>
+<font color=purple><b>Our mission</b></font>: To create an open-source distribution featuring many finite element codes, along with 
+a web notebook and a unified Python interface. We want FEMhub to become an alternative to commercial FEM codes. <br>
 <br>
 
-<p>
+<font color=purple><b>Mailing list</b></font>: Please use this
+<a href="http://groups.google.com/group/femhub">mailing list</a> for all communications related to FEMhub.<br>
+<br>
+
+<font color=purple><b>How to join</b></font>: See
+a list of <a href="http://code.google.com/p/femhub/issues/list?q=label:ProjectIdea">nice
+project ideas</a> and a list of
+<a href="http://code.google.com/p/femhub/issues/list?q=label:EasyToFix"> simple-to-fix issues</a>
+related to FEMhub.
+<br>
+
+
+
 
 	</div>
 </div>
