--- a/templates/news.html
+++ b/templates/news.html
@@ -1,5 +1,8 @@
 <h2 class="heading">News</h2>
 <ul>
+    <li>June 28, 2009: Femhub 0.9.3 released</li>
+    <li>June 26, 2009: Femhub 0.9.2 released</li>
+    <li>June 25, 2009: Femhub 0.9.1 released</li>
     <li>May 18, 2009: femhub.org page created</li>
     <li>May 13, 2009: femhub distribution started</li>
 </ul>
