Zero border for images, keep original dimensions of the images

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,23 +7,24 @@
 
 <font color=purple><b>Open source FEM codes</b></font>: <br> 
 
-<a href="http://hpfem.org"><img src="images/hermes2d_logo.png" width=200 height=70></a>
-<a href="http://code.google.com/p/sfepy/"><img src="images/sfepy_logo_title_small.png" width=200 height=70></a><br>
+<a href="http://hpfem.org"><img src="images/hermes2d_logo.png" width=200
+    height=70 border=0></a>
+<a href="http://code.google.com/p/sfepy/"><img src="images/sfepy_logo_title_small.png" width=200 height=70 border=0></a><br>
 <br>
 
 <p>
 <font color=purple><b>Visualization</b></font>: <br> 
 
-<a href="http://mayavi.sourceforge.net/"><img src="images/mayavi.gif" width=200 height=70></a>
-<a href="http://matplotlib.sourceforge.net/"><img src="images/matplotlib_logo.png" width=200 height=70></a>
+<a href="http://mayavi.sourceforge.net/"><img src="images/mayavi.gif" border=0></a>
+<a href="http://matplotlib.sourceforge.net/"><img src="images/matplotlib_logo.png" border=0></a>
 
 <p>
 <font color=purple><b>Other software</b></font>: <br> 
 
-<a href="http://ipython.scipy.org/moin/"><img src="images/IPy-transparent-120-flush.png" width=200 height=70></a>
-<a href="http://numpy.scipy.org/"><img src="images/numpylogo.png" width=200 height=70></a>
-<a href="http://www.scipy.org/"><img src="images/scipylogo.gif" width=200 height=70></a>
-<a href="http://code.google.com/p/sympy/"><img src="images/sympy-160px.png" width=200 height=70></a><br>
+<a href="http://ipython.scipy.org/moin/"><img src="images/IPy-transparent-120-flush.png" border=0></a>
+<a href="http://numpy.scipy.org/"><img src="images/numpylogo.png" border=0></a>
+<a href="http://www.scipy.org/"><img src="images/scipylogo.gif" border=0></a>
+<a href="http://code.google.com/p/sympy/"><img src="images/sympy-160px.png" border=0></a><br>
 
 
 
