scipy logo fixed

--- a/templates/index.html
+++ b/templates/index.html
@@ -23,7 +23,7 @@
 
 <a href="http://ipython.scipy.org/moin/"><img src="images/IPy-transparent-120-flush.png" border=0></a>
 <a href="http://numpy.scipy.org/"><img src="images/numpylogo.png" border=0></a>
-<a href="http://www.scipy.org/"><img src="images/scipylogo.gif" border=0></a>
+<a href="http://www.scipy.org/"><img src="images/scipylogo.png" border=0></a>
 <a href="http://code.google.com/p/sympy/"><img src="images/sympy-160px.png" border=0></a><br>
 
 
