--- a/templates/layout.html
+++ b/templates/layout.html
@@ -15,7 +15,7 @@
 	<div id="menu" class="boxed">
 		<h2 class="heading">Pages</h2>
 		<ul>
-			<li class="first"><a href="index.html" title="">FEMhub project overview</a></li>
+			<li class="first"><a href="overview.html" title="">FEMhub project overview</a></li>
 			<li><a href="http://nb.femhub.org" title="">Web notebook</a></li>
 			<li><a href="http://code.google.com/p/femhub/" title="">Development</a></li>
 		</ul>
