--- a/templates/news.html
+++ b/templates/news.html
@@ -1,5 +1,6 @@
 <h2 class="heading">News</h2>
 <ul>
+    <li>June 29, 2009: Femhub 0.9.4 released</li>
     <li>June 28, 2009: Femhub 0.9.3 released</li>
     <li>June 26, 2009: Femhub 0.9.2 released</li>
     <li>June 25, 2009: Femhub 0.9.1 released</li>
