--- a/templates/codes.html
+++ b/templates/codes.html
@@ -1,39 +1,75 @@
 {% extends "layout.html" %}
 
 {% block content %}
-<h2>Codes Included in FEMhub</h2>
+<h1>Codes Included in FEMhub</h1>
 
-<h4>Open source FEM codes</h4>
+<hr>
+<p>
+</p>
 
+<h2>A) FEM Engines</h1>
+
+<p>
+</p>
+<center>
+<a href="http://www.ctcms.nist.gov/fipy/">
+    <img src="img/fipy-logo.png" width=60 height=60>
+</a>
 <a href="http://hpfem.org">
     <img src="img/hermes2d_logo.png" width=200 height=70>
 </a>
 <a href="http://code.google.com/p/sfepy/">
-    <img src="img/sfepy_logo_title_small.png" width=200 height=70>
+    <img src="img/sfepy_logo_title_small.png" width=150 height=50>
 </a>
+<p>
+</p>
+<a href="http://math.nist.gov/phaml/"><font size=4>Phaml (logo not available)</font></a>
+</center>
+<p>
+</p>
+The number of FEM engines will grow in the future, depending on how fast we are able to 
+wrap them in Python and adjust their interface to match the FEMhub format. Any help 
+is appreciated. 
+<hr>
+<p>
+</p>
 
-<h4>Visualization</h4>
+<h2>B) Visualization Tools</h2>
 
+<p>
+</p>
+<center>
 <a href="http://mayavi.sourceforge.net/">
     <img src="img/mayavi.gif" border=0>
 </a>
 <a href="http://matplotlib.sourceforge.net/">
-    <img src="img/matplotlib_logo.png" border=0>
+    <img src="img/matplotlib_logo.png" width=300px border=0>
 </a>
+</center>
+<hr>
+<p>
+</p>
 
-<h4>Other software</h4>
+<h2>C) Supporting Libraries</h2>
 
+<p>
+</p>
+<center>
 <a href="http://ipython.scipy.org/moin/">
-    <img src="img/IPy-transparent-120-flush.png" border=0>
+    <img src="img/IPy-transparent-120-flush.png" border=0 height=50px>
 </a>
 <a href="http://numpy.scipy.org/">
-    <img src="img/numpylogo.png" border=0>
+    <img src="img/numpylogo.png" border=0 height=60px>
 </a>
+<p>
+</p>
 <a href="http://www.scipy.org/">
-    <img src="img/scipylogo.png" border=0>
+    <img src="img/scipylogo.png" border=0 height=60px>
 </a>
 <a href="http://code.google.com/p/sympy/">
-    <img src="img/sympy-160px.png" border=0>
-</a><br>
+    <img src="img/sympy-160px.png" border=0 height=60>
+</a>
+</center>
+<hr>
 {% endblock %}
 
