--- a/templates/compute.html
+++ b/templates/compute.html
@@ -8,6 +8,40 @@
 FEMhub can be used to solve a variety of problems ranging from single ODE, ODE systems, one-dimensional PDE,
 to systems of PDE in 2D. More coming soon.
 </p>
+<br>
+<p>
+</p>
+
+<p>
+</p>
+<center>
+<a href="http://nb.femhub.org">
+    <img src="img/taylor.png" width=400 height=300>
+</a><br>
+Solve Ordinary Differential Equations.
+</center>
+<p>
+</p>
+<center>
+<a href="http://nb.femhub.org">
+    <img src="img/pendulum.png" width=400 height=300>
+</a><br>
+Solve Partial Differential Equations in 1D.
+<br>
+<p>
+</p>
+<br>
+<p>
+</p>
+<center>
+<a href="http://nb.femhub.org">
+    <img src="img/pde.png" width=350 height=160>
+</a><br>
+<p>
+</p>
+Solve Partial Differential Equations in 2D.
+</center>
+
 
 {% endblock %}
 
