--- a/templates/conferences.html
+++ b/templates/conferences.html
@@ -1,5 +1,12 @@
 {% extends "layout.html" %}
 
 {% block content %}
+
+<h2>FEM Conferences</h2>
+
+<p>
+List for 2010 coming soon. 
+</p>
+
 {% endblock %}
 
