--- a/templates/teach.html
+++ b/templates/teach.html
@@ -8,5 +8,41 @@
 FEMhub can be used to support classroom teaching of Elementary Numerical Methods, Ordinary Differential Equations, and Finite Element Methods. More coming soon.
 </p>
 
+<p>
+</p>
+<center>
+<a href="http://nb.femhub.org">
+    <img src="img/taylor.png" width=400 height=300>
+</a><br>
+Elementary Numerical Methods
+</center>
+<p>
+</p>
+<center>
+<a href="http://nb.femhub.org">
+    <img src="img/pendulum.png" width=400 height=300>
+</a><br>
+Ordinary Differential Equations
+<br>
+<p>
+</p>
+</center>
+<br>
+<p>
+</p>
+<center>
+<a href="http://nb.femhub.org">
+    <img src="img/waveguide.jpg" width=500 height=220>
+</a><br>
+<p>
+</p>
+Finite Element Methods
+</center>
+<p>
+</p>
+
+
+
+
 {% endblock %}
 
