--- a/templates/compute.html
+++ b/templates/compute.html
@@ -16,17 +16,17 @@ to systems of PDE in 2D. More coming soon.
 </p>
 <center>
 <a href="http://nb.femhub.org">
-    <img src="img/taylor.png" width=400 height=300>
+    <img src="img/chaotic.png" width=400 height=300>
 </a><br>
-Solve Ordinary Differential Equations.
+Ordinary Differential Equations.
 </center>
 <p>
 </p>
 <center>
 <a href="http://nb.femhub.org">
-    <img src="img/pendulum.png" width=400 height=300>
+    <img src="img/schroedinger.png" width=400 height=300>
 </a><br>
-Solve Partial Differential Equations in 1D.
+Partial Differential Equations in 1D.
 <br>
 <p>
 </p>
@@ -39,7 +39,21 @@ Solve Partial Differential Equations in 1D.
 </a><br>
 <p>
 </p>
-Solve Partial Differential Equations in 2D.
+Partial Differential Equations in 2D.
+<br>
+<p>
+</p>
+<br>
+<p>
+</p>
+<center>
+<a href="http://nb.femhub.org">
+    <img src="img/shock3d.png" width=350 height=250>
+</a><br>
+<p>
+</p>
+Partial Differential Equations in 3D.
+
 </center>
 
 
