--- a/templates/install.html
+++ b/templates/install.html
@@ -4,12 +4,23 @@
 <h2>Download and Install</h2>
 
 <p>
-Download, unpack, build:
+First check in the <a href="http://github.com/certik/femhub/raw/master/README.txt">README.txt</a> file for prerequisites,
+these may differ for different operating systems. For example for Ubuntu, those are 
+
+<font color=green>
+<pre>
+$ sudo apt-get install gcc g++ gfortran make m4 perl tar
+</pre>
+</font>
+
+
+
+Then download, unpack, build FEMhub:
 </p>
 
 <font color=green>
 <pre>
-$ wget http://femhub.org/femhub-0.9.7.tar
+$ wget http://femhub.org/pub/femhub-0.9.7.tar
 $ tar -xf femhub-0.9.7.tar
 $ cd femhub-0.9.7
 $ make
