--- a/templates/teach.html
+++ b/templates/teach.html
@@ -20,6 +20,14 @@ Elementary Numerical Methods
 </p>
 <center>
 <a href="http://nb.femhub.org">
+    <img src="img/matrix.png" width=400 height=300>
+</a><br>
+Numerical Linear Algebra
+</center>
+<p>
+</p>
+<center>
+<a href="http://nb.femhub.org">
     <img src="img/pendulum.png" width=400 height=300>
 </a><br>
 Ordinary Differential Equations
