--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -8,7 +8,7 @@ There are many free finite element (FEM) codes on the web, whose comparison and
 interoperability are
 extremely difficult due to different installation requirements, different input and 
 output formats, and capabilities. The goal of FEMhub is to bring transparency and establish 
-basic standards in the development of open dourse FEM codes. All codes in FEMhub will be 
+basic standards in the development of open source FEM codes. All codes in FEMhub will be 
 easy to compare via a unified Python interface and available to anyone for free
 either as a desktop application or via an interactive web notebook. The distribution
 is developed by an open source community around the hp-FEM group at the University of Nevada,
@@ -18,9 +18,9 @@ Reno and available under the GPL license (Version 2, 1991).
 <h2>Project Goals</h2>
 
 <ul>
-    <li>Make it possible to download and install many open source FEM codes easily.</li>
-    <li>Provide access to modeling, mesh generation, and visualization tools.</li>
-    <li>Allow the user to solve a model by means of various codes easily.</li>
+    <li>Make it possible to download and install many FEM codes at once.</li>
+    <li>Facilitate access to modeling, mesh generation, and visualization tools.</li>
+    <li>Allow the user to solve one model by means of multiple codes easily.</li>
     <li>Make all codes in FEMhub usable online via an interactive web notebook.</li>
     <li>Make it possible to run realistic FEM computations from any classroom.</li>
     <li>Create a quality assessment procedure for open source FEM codes. </li>
