--- a/templates/layout.html
+++ b/templates/layout.html
@@ -13,11 +13,11 @@
         <div id="background">
             <div id="container">
                 <div id="banner">
-                    <img src="img/logo/femhub-logo-f-final.png" width=191 height=75></img>
-                    <img src="img/logo/femhub-logo-e-final.png" width=191 height=75></img>
-                    <img src="img/logo/femhub-logo-c-final.png" width=191 height=75></img>
-                    <img src="img/logo/femhub-logo-g-final.png" width=191 height=75></img>
-                    <img src="img/logo/femhub-logo-b-final.png" width=190 height=75></img>
+                    <img src="img/logo/femhub-logo-f-final.png" width=191 height=70></img>
+                    <img src="img/logo/femhub-logo-e-final.png" width=191 height=70></img>
+                    <img src="img/logo/femhub-logo-c-final.png" width=191 height=70></img>
+                    <img src="img/logo/femhub-logo-g-final.png" width=191 height=70></img>
+                    <img src="img/logo/femhub-logo-b-final.png" width=190 height=70></img>
 		</div>
                 <div class="box left">
                     <div class="title">The FEMhub Project</div>
@@ -32,19 +32,17 @@
                 </div>
                 <div class="box right">
                     <div class="title">Quick Links</div>
-                      <p>
-                      </p>
-                      <!-- <a href="http://nb.femhub.org/">web notebook</a><br> -->
-                      <a href="http://groups.google.com/group/femhub">Mailing list</a><br>
-                      <a href="http://hpfem.org/bugs/buglist.cgi?bug_status=__open__&product=FEMhub">FEMhub bugzilla</a><br>
-                      <a href="http://hpfem.org/bugs/buglist.cgi?&product=FEMhub&bug_status=NEW&bug_status=ASSIGNED&bug_status=REOPENED&field0-0-0=flagtypes.name&type0-0-0=equals&value0-0-0=review%3F">Patches to review</a><br>
-                      <a href="http://progit.org/book/">Git book</a>
-                      <p>
-                      </p>
-                    <div class="title">Latest News</div>
-                      <p>
-                      </p>  
                     <ul class="list">
+                        <!-- <a href="http://nb.femhub.org/">web notebook</a><br> -->                     
+                        <li><a href="http://groups.google.com/group/femhub">Mailing list</a></li>
+                        <li><a href="http://hpfem.org/bugs/buglist.cgi?bug_status=__open__&product=FEMhub">FEMhub bugzilla</a></li>
+                        <li><a href="http://hpfem.org/bugs/buglist.cgi?&product=FEMhub&bug_status=NEW&bug_status=ASSIGNED&bug_status=REOPENED&field0-0-0=flagtypes.name&type0-0-0=equals&value0-0-0=review%3F">Patches to review</a></li>
+                        <li><a href="http://progit.org/book/">Git book</a></li>
+                    </ul>
+                </div>
+                <div class="box right">
+                    <div class="title">Latest News</div>
+                     <ul class="list">
                         {% for when, what in news %}
                             <li class="when">{{ when|strftime('%B %d, %Y') }}</li>
                             <li class="what">{{ what }}</li>
@@ -85,7 +83,7 @@
                         </li>
                     </ul>
                 </div>
-                <div id="content">
+                <div style = "height:650px;" id="content">
                     {% block content %}
                     {% endblock %}
                 </div>
