reverting the style patch

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -83,7 +83,7 @@
                         </li>
                     </ul>
                 </div>
-                <div style = "height:650px;" id="content">
+                <div id="content">
                     {% block content %}
                     {% endblock %}
                 </div>
